# bare-collabora

./: .gitignore  CMakeLists.txt  README.md  binding.cc  binding.js  index.d.ts  index.js  package.json  test.js
.github/workflows/: integrate.yml  prebuild.yml  publish.yml
assets/: unorc
assets/uno/: services.rdb  types.rdb
cmake/ports/libreoffice/: native-code.cmake  port.cmake  python3w.sh  relink.js
cmake/ports/libreoffice/patches/: 001-uno-ini-env-override.patch  002-configure-out-of-tree.patch  003-forward-cross-compiling-state.patch  003-skip-install.patch  004-allow-ios-simulator.patch  004-skip-install-on-ios.patch  004-skip-install.patch  005-allow-ios-simulator-on-arm64.patch  006-curl-ios-disable-pipe2.patch  007-install-ios-static-libs.patch  007-ios-icu-data-from-env.patch  009-build-side-lib-ext.patch  009-unzip-restore-permissions.patch  010-argon2-android-kernel-name.patch  011-argon2-use-make-ar.patch  012-pixman-android-with-pic.patch  013-install-android-static-libs.patch  014-lo-all-static-libs-android-nss.patch  015-libxml2-android-with-pic.patch  016-libxslt-android-with-pic.patch  017-android-app-data-dir-fallback.patch  018-osl-dladdr-without-dlapi.patch  019-android-null-assetmgr-noent.patch  020-resmgr-app-data-dir-fallback.patch  021-android-null-javavm-guards.patch  022-fontconfig-data-all-platforms.patch  023-android-makefile-shared-no-nss.patch  024-native-code-graphic-export.patch  025-nasm-ios-mach-o.patch  026-nss-ios-use-64.patch  027-conf-for-build-skip-system-libs.patch  028-msys2-use-cygpath.patch  029-fix-include-symlink.patch  030-quote-gnupatch.patch  031-msys2-makefile-use-cygpath.patch  032-icu-wnt-disable-extras.patch  033-openssl-msys2-perl-fallback.patch  034-atl-paths-windows-format.patch  035-install-ooo-implibs.patch  036-nss-msys2-abspath-windows.patch  (+1 more)
lib/: document.d.ts  document.js
npm/android-arm/: package.json
npm/android-arm64/: package.json
npm/android-ia32/: package.json
npm/android-x64/: index.js  package.json
npm/darwin-arm64/: index.js  package.json
npm/darwin-x64/: package.json
npm/ios-arm64/: package.json
npm/ios-arm64-simulator/: index.js  package.json
npm/ios-x64-simulator/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: index.js  package.json
npm/win32-arm64/: index.js  package.json
npm/win32-x64/: package.json
test/fixtures/: sample.md
